# triggering_controller

./: CMakeLists.txt  README.md  package.xml  triggering_controller_plugin.xml
include/triggering_controller/: EthernetScannerSDK.h  EthernetScannerSDKDefine.h  triggering_controller.hpp  visibility_control.h
include/triggering_controller/test/: ur_urdf.hpp
src/: triggering_controller.cpp  triggering_controller_parameters.yaml
